# 21Sample

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: banana_and_nasu.launch  camera.launch
scripts/: detect_banana_and_nasu.py  kasamashi.py  likes_and_dislikes.py  speech.py  translate.py
