<?xml version="1.0"?>
<package format="2">
  <name>banana_and_nasu</name>
  <description>The banana_and_nasu package</description>
  <version>0.0.0</version>
  <maintainer email="haa-c001@athuman.com">athuman</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>uvc_camera</depend>

  <export>
  </export>
</package>
